--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Mahmoud Hamdan",
   "license": "ISC",
   "devDependencies": {
+    "@babylonjs/core": "^5.17.1",
+    "@babylonjs/loaders": "^5.17.1",
+    "chart.js": "^3.8.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
